feat(mcp-server): complete Spring Boot integration with error handling and testing
Implemented full Spring Boot server layer for MCP POC 1 Hello World, including
CommandLineRunner, tool registration, error handling, and comprehensive manual testing.

**Spring Boot Integration:**
- McpServerRunner (CommandLineRunner) for automatic server startup
- Dependency injection with @Qualifier for ServerStdioTransport
- @PreDestroy lifecycle hook for graceful shutdown
- Resource cleanup (transport.close() on shutdown)

**Tool Registration (CRITICAL FIX):**
- Added @PostConstruct method to ToolRegistryConfig
- Registers all 3 tools at startup (AddTool, MultiplyTool, RandomTool)
- Logs registration completion with tool count

**Error Handling:**
- TransportException → Fatal, stops server (connection lost)
- CodecException → Recoverable, logs and continues (malformed JSON)
- General exceptions → Recoverable, logs and continues
- Try-catch in main loop prevents server crashes

**Java Preview Features (CRITICAL FIX):**
- Added --enable-preview to spring-boot-maven-plugin (runtime)
- Added --enable-preview to surefire-plugin (tests)
- Added --enable-preview to failsafe-plugin (integration tests)
- Fixes UnsupportedClassVersionError for STR string templates

**StdioTransport Fix:**
- Removed @Component from StdioTransport (client-side only)
- Updated Javadoc to clarify client vs server transport
- Prevents Spring auto-instantiation without required parameters

**Manual Testing:**
- Created test-requests/ directory with JSON test files
- tools/list: ✅ Returns all 3 tools with definitions
- tools/call (add 5+3): ✅ Returns 8
- tools/call (multiply 7×6): ✅ Returns 42
- Error handling (unknown method): ✅ Logs CodecException correctly
- Graceful shutdown: ✅ Server stops cleanly on EOF

**Documentation:**
- ROADMAP.md updated: Server COMPLETE ✅, Client NEXT
- LEARNINGS.md: New session entry with 3 critical bug fixes documented

**Files Changed:**
- New: McpServerRunner.java (CommandLineRunn